# MinesweeperC

./: CMakeLists.txt  main.c
Controler/: .gitignore  jeu.c  jeu.h
Model/: case.c  case.h  terrain.c  terrain.h
Test/: test.c  test.h
View/: view.c  view.h
